--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.5.4",
     "@vuelidate/core": "^2.0.0-alpha.43",
     "@vuelidate/validators": "^2.0.0-alpha.31",
+    "axios": "^0.27.2",
     "notyf": "^3.10.0",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
